add tests and coverage

--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -23,7 +23,7 @@
           </a>
         {% endif %}
       </header>
-      <p></p>
+      <p class="body">{{ post['body'] }}</p>
     </article>
     {% if not loop.last %}
       <hr>
